k8s/06-ingress-02.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: websocket-frontend-ingress
  namespace: questionnaire
  annotations:
    nginx.ingress.kubernetes.io/websocket-services: "backend-service"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: questionnaire.local
      http:
        paths:
          - path: /socket.io/
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend-service
                port:
                  number: 3000
